Fixed documentation.
