# backend/swagger.json
@@ -5,31 +5,159 @@
     "description": "An application program interface to manage data between the front end and back end of the library application. This application was built for CSE341 by Austin Campbell and James Green.",
     "version": "1.0.0"
   },
-  "host": "localhost:3000",
+  "host": "https://cse341-team-library.onrender.com",
   "basePath": "/",
   "schemes": [
-    "http"
+    "https"
   ],
   "paths": {
-    "/api-docs": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
     "/users/": {
       "get": {
-        "description": "",
+        "description": "(Will be deprecated in the future of the project) Endpoint that contains all users, requires verification to access.",
         "produces": [
           "application/json"
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "description": "Creates a new user.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "Jeffery"
+                },
+                "lastName": {
+                  "example": "Smith"
+                },
+                "userName": {
+                  "example": "jsmith2015"
+                },
+                "role": {
+                  "example": "User"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "350": {
+            "description": "Missing required role to perform action"
+          },
+          "412": {
+            "description": "Data validation error, check required fields"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/users/{id}": {
+      "get": {
+        "description": "Receives a user by ID",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "ID does not match IDs in the Database."
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
+                  "example": "any"
+                },
+                "userName": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "350": {
+            "description": "Missing required role to perform action"
+          },
+          "400": {
+            "description": "ID does not match IDs in the Database."
+          },
+          "412": {
+            "description": "Data validation error, check required fields"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "ID does not match IDs in the Database."
           },
           "500": {
             "description": "Internal Server Error"
@@ -39,7 +167,7 @@
     },
     "/library/": {
       "get": {
-        "description": "",
+        "description": "Retrieves all books in the library.",
         "produces": [
           "application/json"
         ],
@@ -53,7 +181,7 @@
         }
       },
       "post": {
-        "description": "",
+        "description": "Adds a new book to the library, requires verification and will require publisher role.",
         "parameters": [
           {
             "name": "body",
@@ -62,22 +190,22 @@
               "type": "object",
               "properties": {
                 "title": {
-                  "example": "any"
+                  "example": "Moby Dick"
                 },
                 "author": {
-                  "example": "any"
+                  "example": "Herman Melville"
                 },
                 "genre": {
-                  "example": "any"
+                  "example": "Adventure fiction"
                 },
                 "published": {
-                  "example": "any"
+                  "example": "2018"
                 },
                 "isbn": {
-                  "example": "any"
+                  "example": "978-1-50-3280786"
                 },
                 "stock": {
-                  "example": "any"
+                  "example": "2"
                 }
               }
             }
@@ -88,10 +216,10 @@
             "description": "No Content"
           },
           "350": {
-            "description": ""
+            "description": "Missing required role to perform action"
           },
           "412": {
-            "description": "Precondition Failed"
+            "description": "Data validation error, check required fields"
           },
           "500": {
             "description": "Internal Server Error"
@@ -101,7 +229,7 @@
     },
     "/library/{id}": {
       "get": {
-        "description": "",
+        "description": "Retrieves a single book in the library by the ID.",
         "produces": [
           "application/json"
         ],
@@ -118,12 +246,15 @@
             "description": "OK"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "ID does not match IDs in the Database."
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "put": {
-        "description": "",
+        "description": "Updates the content of a book in the library.",
         "parameters": [
           {
             "name": "id",
@@ -138,22 +269,22 @@
               "type": "object",
               "properties": {
                 "title": {
-                  "example": "any"
+                  "example": "Moby Dick"
                 },
                 "author": {
-                  "example": "any"
+                  "example": "Herman Melville"
                 },
                 "genre": {
-                  "example": "any"
+                  "example": "Adventure fiction"
                 },
                 "published": {
-                  "example": "any"
+                  "example": "1851"
                 },
                 "isbn": {
-                  "example": "any"
+                  "example": "978-1-50-3280786"
                 },
                 "stock": {
-                  "example": "any"
+                  "example": "0"
                 }
               }
             }
@@ -164,10 +295,10 @@
             "description": "No Content"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "ID does not match IDs in the Database."
           },
           "412": {
-            "description": "Precondition Failed"
+            "description": "Data validation error, check required fields"
           },
           "500": {
             "description": "Internal Server Error"
@@ -175,7 +306,7 @@
         }
       },
       "delete": {
-        "description": "",
+        "description": "Deletes a book from the library by the ID number",
         "parameters": [
           {
             "name": "id",
@@ -186,10 +317,10 @@
         ],
         "responses": {
           "204": {
-            "description": "No Content"
+            "description": "Successfully deleted"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "ID does not match IDs in the Database."
           },
           "500": {
             "description": "Internal Server Error"
@@ -199,7 +330,7 @@
     },
     "/library/checkout/{id}": {
       "put": {
-        "description": "",
+        "description": "Checks out one book from the inventory of the library and updates it in the database.",
         "parameters": [
           {
             "name": "id",
@@ -211,184 +342,31 @@
             "name": "body",
             "in": "body",
             "schema": {
-              "type": "object",
-              "properties": {
-                "title": {
-                  "example": "any"
-                },
-                "author": {
-                  "example": "any"
-                },
-                "genre": {
-                  "example": "any"
-                },
-                "published": {
-                  "example": "any"
-                },
-                "isbn": {
-                  "example": "any"
-                },
-                "stock": {
-                  "example": "any"
-                }
-              }
+              "type": "object"
             }
           }
         ],
         "responses": {
           "204": {
-            "description": "No Content"
+            "description": "Book was successfully checked out"
           },
           "349": {
-            "description": ""
+            "description": "Book was successfully checked out"
           },
           "350": {
-            "description": ""
+            "description": "Missing required role to perform action."
           },
           "351": {
-            "description": ""
+            "description": "The book is out of stock."
           },
           "400": {
-            "description": "Bad Request"
+            "description": "ID does not match IDs in the Database."
           },
           "412": {
-            "description": "Precondition Failed"
+            "description": "Data validation error, check required fields"
           },
           "500": {
             "description": "Internal Server Error"
-          }
-        }
-      },
-      "get": {
-        "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      },
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/library/checkout/": {
-      "get": {
-        "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "title": {
-                  "example": "any"
-                },
-                "author": {
-                  "example": "any"
-                },
-                "genre": {
-                  "example": "any"
-                },
-                "published": {
-                  "example": "any"
-                },
-                "isbn": {
-                  "example": "any"
-                },
-                "stock": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "350": {
-            "description": ""
-          },
-          "412": {
-            "description": "Precondition Failed"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/library/checkout/checkout/{id}": {
-      "put": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "349": {
-            "description": ""
-          },
-          "350": {
-            "description": ""
-          },
-          "351": {
-            "description": ""
-          },
-          "400": {
-            "description": "Bad Request"
           }
         }
       }
